--- a/UDDNSQuery/UDDNSQuery.csproj
+++ b/UDDNSQuery/UDDNSQuery.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomActions.cs" />
+    <Compile Include="FolderBrowser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryAPI.cs" />
     <Compile Include="QueryAPIName.cs" />
