--- a/UDDNSQuery/UDDNSQuery.csproj
+++ b/UDDNSQuery/UDDNSQuery.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomActions.cs" />
+    <Compile Include="EnableThemingInScope.cs" />
     <Compile Include="FolderBrowser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryAPI.cs" />
@@ -55,6 +56,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Errors.resx</DependentUpon>
     </Compile>
+    <Compile Include="StatusDialog.cs" />
     <Compile Include="Strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
