--- a/UnofficialDDNS/UnofficialDDNS.csproj
+++ b/UnofficialDDNS/UnofficialDDNS.csproj
@@ -68,31 +68,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfoCommon.cs" />
-    <Compile Include="CustomException.cs" />
     <Compile Include="LogSingleton.cs" />
-    <Compile Include="MainPollingThread.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ProjectInstaller.Designer.cs">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
-    <Compile Include="QueryAPI.cs" />
-    <Compile Include="QueryAPINameDotCom.cs" />
-    <Compile Include="RegistryRead.cs" />
-    <Compile Include="Strings1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Strings.resx</DependentUpon>
-    </Compile>
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnofficialDDNS.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="UnofficialDDNS.Designer.cs">
-      <DependentUpon>UnofficialDDNS.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -102,13 +89,6 @@
   <ItemGroup>
     <EmbeddedResource Include="ProjectInstaller.resx">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Strings1.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UnofficialDDNS.resx">
-      <DependentUpon>UnofficialDDNS.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +113,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="LICENSE.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UDDNSQuery\UDDNSQuery.csproj">
+      <Project>{71e05116-3fa9-4b9c-b62e-dbcc47adbc47}</Project>
+      <Name>UDDNSQuery</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
