--- a/UnofficialDDNS/UnofficialDDNS.csproj
+++ b/UnofficialDDNS/UnofficialDDNS.csproj
@@ -69,27 +69,15 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfoCommon.cs" />
     <Compile Include="LogSingleton.cs" />
-    <Compile Include="ProjectInstaller.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="ProjectInstaller.Designer.cs">
-      <DependentUpon>ProjectInstaller.cs</DependentUpon>
-    </Compile>
+    <Compile Include="ProjectInstaller.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnofficialDDNS.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="UnofficialDDNS.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="app.manifest" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="ProjectInstaller.resx">
-      <DependentUpon>ProjectInstaller.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
