--- a/UDDNSQuery/UDDNSQuery.csproj
+++ b/UDDNSQuery/UDDNSQuery.csproj
@@ -70,6 +70,7 @@
     </Compile>
     <Compile Include="TaskDialog.cs" />
     <Content Include="CustomAction.config" />
+    <Content Include="LICENSE.txt" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Errors.resx">
