--- a/UnofficialDDNS/UnofficialDDNS.csproj
+++ b/UnofficialDDNS/UnofficialDDNS.csproj
@@ -47,6 +47,7 @@
     </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\UnofficialDDNS.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
