--- a/UnofficialDDNS/UnofficialDDNS.csproj
+++ b/UnofficialDDNS/UnofficialDDNS.csproj
@@ -47,7 +47,8 @@
     </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\UnofficialDDNS.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
